# ai-threathunt-harness

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: __init__.py  pipeline.py
app/detections/: __init__.py  engine.py  rules.py
app/investigation/: __init__.py  builder.py  models.py
app/llm/: __init__.py  client.py  prompt_builder.py
app/mitre/: __init__.py  mappings.py  models.py
app/normalization/: __init__.py  models.py  sysmon.py
app/scoring/: __init__.py  engine.py  models.py
app/validation/: __init__.py  llm_output.py
scripts/: run_harness.py
tests/: test_detection_engine.py  test_investigation_builder.py  test_llm_output_validator.py  test_mitre_mapping.py  test_openai_client.py  test_pipeline.py  test_prompt_builder.py  test_run_harness_cli.py  test_scoring_engine.py  test_sysmon_normalizer.py
