[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-threathunt-harness"
version = "0.1.0"
description = "Local AI threat hunt harness"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3",
    "openai>=1.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
